@@ -94,14 +94,14 @@ our @EXPORT_OK =
       todigits fromdigits todigitstring sumdigits
       tozeckendorf fromzeckendorf
       sqrtmod allsqrtmod rootmod allrootmod
-      invmod addmod submod mulmod divmod powmod qnr
+      invmod addmod submod mulmod divmod powmod muladdmod mulsubmod
       vecsum vecmin vecmax vecprod vecreduce vecextract vecequal
       vecany vecall vecnotall vecnone vecfirst vecfirstidx vecmex vecpmex
       moebius mertens liouville sumliouville prime_omega prime_bigomega
       euler_phi jordan_totient exp_mangoldt sumtotient
       partitions bernfrac bernreal harmfrac harmreal
       chebyshev_theta chebyshev_psi
-      divisor_sum carmichael_lambda kronecker hclassno inverse_totient
+      divisor_sum carmichael_lambda kronecker hclassno qnr inverse_totient
       ramanujan_tau ramanujan_sum
       stirling znorder znprimroot znlog legendre_phi
       factorial factorialmod binomial binomialmod
@@ -4774,6 +4774,14 @@ Given three integers C<a>, C<b>, and C<n>, return C<(a-b) mod |n|>.
 Given three integers C<a>, C<b>, and C<n>, return C<(a*b) mod |n|>.
 This is particularly useful when C<n> fits in a native integer.
 No bigint package is needed and this can be 10-200x faster than using one.
+
+=head2 muladdmod
+
+Given four integers C<a>, C<b>, C<c>, and C<n>, return C<(a*b+c) mod |n|>.
+
+=head2 mulsubmod
+
+Given four integers C<a>, C<b>, C<c>, and C<n>, return C<(a*b-c) mod |n|>.
 
 =head2 divmod
 
