@@ -77,6 +77,8 @@ Revision history for Perl module Math::Prime::Util
     - qnr(n)                          least quadratic non-residue
     - binomialmod(n,k,m)              fast binomial(n,k) mod m
     - submod(a, b, n)                 a - b mod n
+    - muladdmod(a, b, c, n)           a * b + c mod n
+    - mulsubmod(a, b, c, n)           a * b - c mod n
     - rootmod(a, k, n)                modular k-th root
     - allrootmod(a,k,n)               all k-th roots of a (mod n)
     - vecequal(\@a, \@b)              compare two arrays for equality
